--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vladbeatz00@gmail.com
-spring.mail.password=dqxm nktc ecqi ykmi
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
